--- a/src/styles/Navbar/Logo.module.css
+++ b/src/styles/Navbar/Logo.module.css
@@ -1,5 +1,5 @@
 .logo {
-    height: 5%;
+    height: 45px;
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center; 
