--- a/src/styles/Details/Overview/OverviewPage/OverviewLeft.module.css
+++ b/src/styles/Details/Overview/OverviewPage/OverviewLeft.module.css
@@ -1,7 +1,6 @@
 .left{
     width: 70%;
-    background-color: green;
-    height: 100vh;
+    /* background-color: green; */
+    /* height: 100vh; */
     margin-right: 2rem;
 }
-
