--- a/src/styles/Details/Search.module.css
+++ b/src/styles/Details/Search.module.css
@@ -1,5 +1,5 @@
 .search{
-    height: 47px;
+    height: 2.8rem;
     border-bottom: 2px solid rgb(181, 181, 181);
     display: flex;
     flex-direction: row;
