--- a/src/styles/Details.module.css
+++ b/src/styles/Details.module.css
@@ -1,8 +1,8 @@
 /* Details.module.css */
 
 .details {
-    height: 130vh; /* Set height to fill entire viewport */
-    width: 80%;
+    /* height: 130vh; */
+    width: 75rem;
     display: flex;
     flex-direction: column;
   }
