--- a/src/styles/Details/Overview.module.css
+++ b/src/styles/Details/Overview.module.css
@@ -1,6 +1,6 @@
 .overview{
     background-color: rgb(230 230 230);
-    height: 100%;
+    /* min-height: 100%; */
     display: flex;
     flex-direction: column;
     /*text-align: center;
