--- a/src/styles/Details/Search/Notifications.module.css
+++ b/src/styles/Details/Search/Notifications.module.css
@@ -1,7 +1,7 @@
 /* Notifications.module.css */
 
 .notification{
-    width: 70%;
+    width:40rem;
     display: flex;
     justify-content: end; /* Align items at the end with space between them */
     align-items: center; 
