--- a/src/styles/Details/Search/SearchArea.module.css
+++ b/src/styles/Details/Search/SearchArea.module.css
@@ -1,14 +1,11 @@
 .search{
-    width: 30%;
+    width: 25rem;
     border-radius: 100px;
     border: 2px solid rgb(181, 181, 181);
     margin: 5px 35px;
     padding-left: 20px;
 }
 
-.search:hover{
-    /* cursor: pointer; */
-}
 .text{
     text-align: center;
 } 
