--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,6 +1,6 @@
 .menu {
     display: flex;
     flex-direction: column;
-    height: 100vh; /* Set height to fill entire viewport */
-    width: 20%;
+    /* height: 100vh;  */
+    width: 25em;
   }
