--- a/src/styles/Navbar/Logo.module.css
+++ b/src/styles/Navbar/Logo.module.css
@@ -1,11 +1,11 @@
 .logo {
-    height: 45px;
+    height: 2.8rem;
     background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center; 
     justify-content: center; 
     color: rgb(0, 0, 0);
-    font-size: 0.6rem; 
+    font-size: 0.6em; 
     font-weight: bold; 
     border-bottom: 2px solid rgb(181, 181, 181);
     margin-left:10px;
