--- a/src/styles/Details/Overview.module.css
+++ b/src/styles/Details/Overview.module.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     /*text-align: center;
     justify-content: center;  */
-    box-shadow: -4px 0px 8px rgba(6, 6, 6, 0.2);
+    box-shadow: -4px 6px 8px rgba(0, 0, 0, 0.4);
+    /* box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.7);  */
+
     padding: 0 30px;
   }
