--- a/src/styles/Details/Overview/OverviewPage/OverviewLeft/ExchangeRate.module.css
+++ b/src/styles/Details/Overview/OverviewPage/OverviewLeft/ExchangeRate.module.css
@@ -4,6 +4,7 @@
     background-color: rgb(75, 192, 192);
     border-radius: 1rem;
     margin-bottom: 2%;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); 
 }
 .title{
     /* text-align: center; */
