--- a/src/styles/Details/Overview/OverviewPage/OverviewLeft/GraphBars.module.css
+++ b/src/styles/Details/Overview/OverviewPage/OverviewLeft/GraphBars.module.css
@@ -1,10 +1,11 @@
 .card{
     /* width: 100%; */
-    height: 30rem;
+    height: 27rem;
     background-color: rgba(255, 255, 255, 0.522);
     border-radius: 1rem;
     margin-bottom: 1.5rem;
     padding: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); 
 }
 
 .card h2{
