--- a/src/styles/Details/Overview/OverviewPage/OverviewLeft/YourBalance.module.css
+++ b/src/styles/Details/Overview/OverviewPage/OverviewLeft/YourBalance.module.css
@@ -4,21 +4,33 @@
     background-color: red;
     border-radius: 1rem;
     margin-bottom: 3%;
-    background-image: url('../../../../../assets/backgroundCC.avif');
+    background-image: url('../../../../../assets/i2.jpg');
     background-size: cover;
     background-position: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); 
+    /* opacity: 0.8; */
 }
 
+.card h1,
+.card h4{
+    padding: 2rem 0 0 5rem;
+}
+.card h1{
+    margin: 0;
+    padding-top: 0;
+    font-size: 4rem;
+    color: #d20404;
+}
 .balance{
-    text-align: center;
-    color: rgba(0, 0, 0, 0.72);
+    /* text-align: center; */
+    color: #a30b00;
 
 }
 .balance span{
     font-size: 3rem;
     font-weight: bolder;
     text-decoration: underline;
-    color: rgb(39, 2, 161);
+    color: rgb(255, 0, 0);
 } 
 .cardDetails{
     color: rgb(61, 0, 0);
