--- a/src/styles/Navbar/Image.module.css
+++ b/src/styles/Navbar/Image.module.css
@@ -8,6 +8,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); 
+
 }
 
 /* Image.module.css */
@@ -25,7 +27,6 @@
     margin-bottom: 0px;
     margin-top: 15px;
     transition: all 0.3s ease; /* Smooth transition effect */
-
 }
 
 
@@ -40,4 +41,5 @@ img{
     width: 50%;
     border-radius: 10px;
     padding: 0px 5px;
+    
 }
