--- a/src/styles/Details/Overview/OverviewPage/OverviewLeft/YourBalance.module.css
+++ b/src/styles/Details/Overview/OverviewPage/OverviewLeft/YourBalance.module.css
@@ -20,12 +20,19 @@
     padding-top: 0;
     font-size: 4rem;
     color: #d20404;
+    transition: all 1.5s ease;
 }
 .balance{
-    /* text-align: center; */
     color: #a30b00;
-
 }
+
+.card h1:hover {
+    transition: 1.5s;
+    color: #328800;
+    font-size: 5rem; /* Increase font size */
+    font-weight: bold; /* Apply bold font weight */
+  }
+  
 .balance span{
     font-size: 3rem;
     font-weight: bolder;
