--- a/src/styles/Details/Search.module.css
+++ b/src/styles/Details/Search.module.css
@@ -3,6 +3,7 @@
     border-bottom: 2px solid rgb(181, 181, 181);
     display: flex;
     flex-direction: row;
+    width:  100%;
     /* text-align: center;
     justify-content: center; */
     /* font-size: 0.6rem;  */
