--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 /* Apply Roboto font family to the body */
-body {
+/* body {
   font-family: Serif;
-}
+} */
 
 /* Apply Roboto font family to specific elements */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, span, p {
   font-family: 'Roboto', sans-serif;
 }
 
-p {
+/* p {
   font-family: 'Roboto', sans-serif;
-}
+} */
 
 /* Example of applying different font families to different elements */
 /* Header with Montserrat font */
